Some Simple Fix to Resolve the remaining comments in CL 1192688

There are some comments from Bret(bsep@) regarding the migration dialog
view.

1) Change the names of some file local constants.
2) Change dialog view member to pointers.
3) Change label initialization in view util.
4) Add a comment for feature kAutofillLocalCardMigrationShowFeedback.

Bug: 884008
Change-Id: I5a1f0e3637415d39bd4b602c69a30adcfd2916c5
Reviewed-on: https://chromium-review.googlesource.com/1218462
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Siyu An <siyua@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#590796}(cherry picked from commit 7c32903871755d9e3b011cee5a6ca0523c646f2d [formerly c654cafbca9ee25ab8dd15dc1dee8ce8b48971cb])
Reviewed-on: https://chromium-review.googlesource.com/1225885
Reviewed-by: Jared Saul <jsaul@google.com>
Cr-Commit-Position: refs/branch-heads/3538@{#409}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 73f51f41555d3c5968200cd317b64d80bce1ae36